delete submission and delete contest routes
