# Photo-prestiges/gateway/app.js
@@ -18,8 +18,10 @@ app.post('/register', registerRoute);
 app.post('/login', authRoute);
 app.post('/create-contest', contestRoute);
 app.post('/update-contest', contestRoute);
+app.delete('/delete-contest', contestRoute);
 app.post('/register-for-contest', contestRoute);
 app.post('/update-submission', contestRoute);
+app.delete('/delete-submission', contestRoute);
 
 app.get('/get-contests', readRoutes);
 
